# AndroidDemo

./: build.gradle  settings.gradle
AESModule/: build.gradle
AESModule/src/main/: AndroidManifest.xml
AESModule/src/main/cpp/: CMakeLists.txt  LibEntry.c  aes.c  aes.h  internal.h  log.h
AESModule/src/main/cpp/test/: aes_test.c
KVModule/: build.gradle
KVModule/src/main/cpp/: CMakeLists.txt
KVModule/src/main/cpp/include/: KVSocketServer.h  cdefs.h  futex.h  kv.h  log.h  strtab.h  timer.h  utils.h
KVModule/src/main/cpp/test/: test.cpp
KVModule/src/main/cpp/util/: KVSocketServer.cpp  StringFormat.cpp  kv.cpp  timer.cpp  utils.cpp
KVModuleJava/: build.gradle
KVModuleJava/src/main/: AndroidManifest.xml
KVModuleJava/src/main/java/com/example/kvmodulejava/core/: DataArea.java  DataInfo.java  DataNode.java  DataOper.java  KVManager.java  Utils.java
KVModuleNative/: build.gradle
KVModuleNative/src/main/: AndroidManifest.xml
KVModuleNative/src/main/cpp/: CMakeLists.txt  JNIkv.cpp
KVModuleNative/src/main/cpp/include/: ScopedBuffer.h  ScopedLocalUtfStr.h  ScopedMutexLock.h  StringFormat.h  strtab.h
KVModuleNative/src/main/cpp/test/: test.cpp  test.h
KVModuleNative/src/main/java/core/module/kv/: KVUtils.java
MD5Module/: build.gradle
MD5Module/src/main/: AndroidManifest.xml
MD5Module/src/main/cpp/: CMakeLists.txt
MD5Module/src/main/cpp/base/: basictypes.h  md5.cpp  md5.h
RBTree/: build.gradle
RBTree/src/main/: AndroidManifest.xml
RBTree/src/main/cpp/: CMakeLists.txt  JNICore.cpp
RBTree/src/main/cpp/include/util/: ScopedLocalEnv.h  log.h
RBTree/src/main/cpp/librbtree/: monitor_file.c  xmalloc.c
RBTree/src/main/cpp/librbtree/include/: monitor_file.h  rbtree.h  xmalloc.h
RBTree/src/main/java/com/core/rbtree/util/: JniBridge.java
apifake/: build.gradle
apifake/src/main/: AndroidManifest.xml
apifake/src/main/cpp/: CMakeLists.txt  apiFake.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: kv
app/src/main/java/com/example/demo/: DemoApplication.java  FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/java/com/example/demo/test/: ApiFakeTest.java  IoUtils.java  KVTest.java  MeizuHook.java  NetTest.java  PrivacyApiTest.java  RefUtils.java  Test.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
gadgetModule/: build.gradle
gadgetModule/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hack/: build.gradle
hack/src/main/: AndroidManifest.xml
hack/src/main/java/com/hack/core/: PluginManager.java
hack/src/main/java/com/hack/core/talkingtom/: HackerInstrumentation.java  TalkingTomHacker.java
hack/src/main/java/com/hack/utils/: HandlerUtils.java  RefUtils.java
javaPipe/: build.gradle
javaPipe/src/main/: AndroidManifest.xml
javaPipe/src/main/java/com/example/javapipe/: JavaPipe.java
runtimeFake/: build.gradle
runtimeFake/src/main/: AndroidManifest.xml
runtimeFake/src/main/cpp/: CMakeLists.txt  runtimeFake.cpp
runtimeFake/src/main/java/core/module/runtimefake/: RuntimeFake.java
